update homepage typo

--- a/Home.html
+++ b/Home.html
@@ -84,7 +84,7 @@ the future together, Let's work together, About Us, Built on a Strong Foundation
       <img class="u-image u-image-1" src="images/2746028509b60b06ba2535fd9cbacb808133ac24e0ee0084b91ffffbf73cb5dd155a5d36c7bdf1e00c3b4aacddbf0a724f9bf9ccbc499f5710bc8a_1280.jpg" data-image-width="150" data-image-height="84">
       <div class="u-expanded-width u-opacity u-opacity-70 u-shape u-shape-rectangle u-white u-shape-1"></div>
       <h1 class="u-text u-text-palette-1-base u-text-1">Explore the Data</h1>
-      <p class="u-text u-text-2">Explore cell-phenotype relationships using expression weighted phenotype enrichment&nbsp;</p>
+      <p class="u-text u-text-2">Explore cell-phenotype relationships using expression weighted cell type enrichment&nbsp;</p>
       <div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-1">
